More changes from Solid Waste.

--- a/_pages/dept/solid_waste/billing.html
+++ b/_pages/dept/solid_waste/billing.html
@@ -21,7 +21,7 @@ permalink: /solid_waste/billing
                 <tr>
                   <td headers="servicelevel">35 gallon</td>
                   <td headers="monthlyfee">$57.00</td>
-                  <td headers="annualfee">228.00</td>
+                  <td headers="annualfee">$228.00</td>
                   <td headers="febfee">$223.00</td>
                 </tr>
                 <tr>
