--- a/_pages/dept/solid_waste/empiredisposal.html
+++ b/_pages/dept/solid_waste/empiredisposal.html
@@ -6,7 +6,7 @@ permalink: /solid_waste/empiredisposal
   <div class="panel-body">
     <p>
         Empire Disposal services Latah County accounts located in Farmington and the area north of Potlatch. Carts must be placed within 5 feet of the county or state road by 5am on the scheduled service day.
-        Larger items must be hauled to a Bulky Waste Site or the Solid Waste Processing Facility.  
+        Larger items must be hauled to a Bulky Waste Site or the Solid Waste Processing Facility. If you have extra waste you will be billed directly from Empire Disposal.
    </p>
       <p>
         Waste should be neatly contained in garbage bags.  SHARPS waste must be in a secure, puncture-resistant container with remainder of garbage.
