Fixed calendarModal includes.

--- a/_pages/dept/planning_building/home.html
+++ b/_pages/dept/planning_building/home.html
@@ -108,7 +108,7 @@ util: true
 		</div>
 	</div>
 
-	{% include calendarModal.js %}
+	{% include calendarModal.html %}
 	<!-- End Upcoming Events -->
 
 
