--- a/_pages/dept/auditor/elections/home.html
+++ b/_pages/dept/auditor/elections/home.html
@@ -208,7 +208,7 @@ calendar: true
       </div>
       <div id='loading' class="text-center"><i class="fa fa-spinner fa-2x fa-spin"></i></div>
       <div id='calendar'></div>
-      {% include calendarModal.js %}    
+      {% include calendarModal.html %}    
     </div><br />
     <!-- Election Resources -->
     <div class="panel-group" id="electionResources" role="tablist" aria-multiselectable="true">
