Added description for Parks, added panel-title for jail division page.

--- a/_pages/dept/parks_rec/home.html
+++ b/_pages/dept/parks_rec/home.html
@@ -12,7 +12,7 @@ permalink: /parks_rec/
       <div class="panel panel-default">
         <div class="panel-body text-justify">
           <p>
-            The Parks and Recreations Department
+              The Parks and Recreation Department’s main goal is to provide access to safe and maintained park facilities and outdoor environments that allow individuals to pursue recreational and leisure activities to benefit health and well-being of the residents of Latah County and visitors.
           </p>
         </div>
       </div>
