--- a/_pages/dept/sheriff/jaildivision.html
+++ b/_pages/dept/sheriff/jaildivision.html
@@ -47,7 +47,7 @@ permalink: /sheriff/jaildivision/
 
 		<div class="panel panel-default">
 			<div class="panel-heading">
-				<h3 class="text-center">Additional Information</h3>
+				<h3 class="panel-title text-center">Additional Information</h3>
 			</div>
 			<div class="list-group">
 				<a href="#" id="inmateTelephone" class="list-group-item list-link text-center" onclick="downloadFile('Latah-County-Website-Phone-Information.pdf'); return false;">Inmate Telephone Services</a>
