Fixed broken links in employment

--- a/_pages/employment/home.html
+++ b/_pages/employment/home.html
@@ -15,10 +15,10 @@ permalink: /employment/
         </div>
         <div class="List-group">
             <a href="http://labor.idaho.gov/dnn/JobSeekers/JobSearch/tabid/661/Default.aspx" class="list-group-item list-link text-center">Idaho Department of Labor Job Search</a>
-            <a href="http://www.nwmarket.com/index.php?page=top-ads&cat=Jobs" class="list-group-item list-link text-center">Moscow-Pullman Daily News Classifieds</a>
-            <a href="http://www.hr.uidaho.edu/default.aspx?pid=35496" class="list-group-item list-link text-center">University of Idaho Employment Classifieds</a>
+            <a href="http://www.nwmarketjobs.com/" class="list-group-item list-link text-center">Moscow-Pullman Daily News Classifieds</a>
+            <a href="https://www.uidaho.edu/human-resources/jobs" class="list-group-item list-link text-center">University of Idaho Employment Classifieds</a>
             <a href="http://www.hrs.wsu.edu/" class="list-group-item list-link text-center">WSU Employment Classifieds</a>
-            <a href="http://www.wa.gov/esd/employment.html" class="list-group-item list-link text-center">Washington State WorkSource</a>        
+            <a href="https://www.worksourcewa.com/" class="list-group-item list-link text-center">Washington State WorkSource</a>        
     </div>
 
   </div>
