Added coroner figure to the coroner's main page.

--- a/_pages/dept/coroner/home.html
+++ b/_pages/dept/coroner/home.html
@@ -8,14 +8,20 @@ permalink: /coroner/
   <!-- Left Pane -->
   <div class="col-md-8">
     <!-- Department Description -->
-    <div class="">
-      <div class="panel panel-default">
-        <div class="panel-body text-justify">
-          <p>
-            Under Title 19, Chapter 43, Section 194301 of the Idaho Code. The Coroner, as soon as she is informed that a person in her county has died: As a result of violence, whether apparently homicidal, suicidal or accidental, or A) Under Suspicious or unknown circumstances, or B) When not attended by a physician during his/her last illness and the cause of death cannot be certified by a physician, shall go to place of death and take charge of the body. An investigation into the events leading up to the person´s death shall commence in cooperation with the appropriate law enforcement agency. The Coroner may authorize an autopsy to be performed by a licensed physician to aid in accurately and scientifically determining the cause and manner of death. The Coroner shall also prepare a written report of the factual information gathered during the course of such an investigation.
-          </p>
+    <div class="row" id="deptDescription">
+        <div class="col-md-12">
+          <div class="panel panel-primary">
+            <div class="panel-body">
+              <figure style="float:left; padding:0.5em; margin-right:10px; ">
+                {% cloudinary /img/officials/CathyMabbutt.png class="figure-img img-responsive rounded" width="250" alt="Latah County Coroner" %}
+                <figcaption class="figure-caption text-center">Coroner Cathy Mabbutt</figcaption>
+              </figure>
+              <p>
+                Under Title 19, Chapter 43, Section 194301 of the Idaho Code. The Coroner, as soon as she is informed that a person in her county has died: As a result of violence, whether apparently homicidal, suicidal or accidental, or A) Under Suspicious or unknown circumstances, or B) When not attended by a physician during his/her last illness and the cause of death cannot be certified by a physician, shall go to place of death and take charge of the body. An investigation into the events leading up to the person´s death shall commence in cooperation with the appropriate law enforcement agency. The Coroner may authorize an autopsy to be performed by a licensed physician to aid in accurately and scientifically determining the cause and manner of death. The Coroner shall also prepare a written report of the factual information gathered during the course of such an investigation.
+              </p>
+            </div>
+          </div>
         </div>
-      </div>
     </div>
     <!-- End Description -->
     <!-- Additional Info -->
