Added a comma in tree control title

--- a/_pages/dept/commissioners/home.html
+++ b/_pages/dept/commissioners/home.html
@@ -30,7 +30,7 @@ tree: true
       <!-- Agendas Proceedings and Proclamations -->
         <div class="panel panel-primary">
           <div class="panel-heading" >
-            <h4 class="panel-title text-center">Agendas Proceedings and Proclamations</h4>
+            <h4 class="panel-title text-center">Agendas, Proceedings and Proclamations</h4>
           </div>
           <div class="list-group">
             <div id="comAgendas"></div>
