Update calendar to use new api (daysBefore, daysAfter).

--- a/_pages/dept/auditor/elections/home.html
+++ b/_pages/dept/auditor/elections/home.html
@@ -297,6 +297,6 @@ calendar: true
 </div>
 
 <script text/javascript>
-  calendarList('Elections', 30);
+  calendarList('Elections', 0, 30);
   calendarMonth();
 </script>
