--- a/_pages/dept/planning_building/home.html
+++ b/_pages/dept/planning_building/home.html
@@ -116,7 +116,7 @@ util: true
 </div>
 
 <script type="text/javascript">
-	calendarList("PlanningBuilding",30);
+	calendarList("PlanningBuilding",0, 30);
 </script>
 <script type="text/javascript">
 	deptTree("pbDir", "PlanningBuilding")
