--- a/_pages/dept/court_assisstance/home.html
+++ b/_pages/dept/court_assisstance/home.html
@@ -3,6 +3,7 @@ layout: page
 title: Court Assistance
 permalink: /court_assistance/
 tree: true
+calendar: true
 ---
 
 
@@ -174,6 +175,18 @@ tree: true
           <li class="list-group-item text-center">Court Standard Forms and Instructions</li>
         </ul>
       </div>
+      <!-- Todays Hours -->
+      <div class="panel panel-default">
+        <div class="panel-heading">
+          <h4 class="panel-title text-center">Today's Hours</h4>
+        </div>
+        <div id='loading' class="text-center">
+          <i class="fa fa-spinner fa-2x fa-spin"></i>
+        </div>
+        <div id='calendar'></div>
+        {% include calendarModal.html %}
+      </div>
+      <br />
     </div><!-- <div class="col-md-4"> -->
   </div><!-- row -->
 
@@ -187,3 +200,7 @@ tree: true
   				setTimeout(() => window.open(url, '_blank'), 500);
   			}
   </script>
+<script text/javascript>
+  calendarList('CAO-Hours', 0, 0);
+  calendarMonth();
+</script>
