removed _blank from window.open

--- a/_pages/dept/court_assisstance/home.html
+++ b/_pages/dept/court_assisstance/home.html
@@ -197,7 +197,7 @@ calendar: true
   <script text/javascript>
   function downloadFile(filename){
   				var url = 'https://www.latah.id.us/api/DownloadFileEx?filename=' + filename;
-  				setTimeout(() => window.open(url, '_blank'), 500);
+  				setTimeout(() => window.open(url), 500);
   			}
   </script>
 <script text/javascript>
