--- a/_pages/dept/commissioners/home.html
+++ b/_pages/dept/commissioners/home.html
@@ -133,6 +133,6 @@ deptTree("comAgendas", "Commissioners")
 <script text/javascript>
 function downloadFile(filename){
 				var url = 'https://www.latah.id.us/api/DownloadFileEx?filename=' + filename;
-				setTimeout(() => window.open(url, '_blank'), 500);
+				setTimeout(() => window.open(url), 500);
 			}
 </script>
