--- a/_pages/dept/treasurer/home.html
+++ b/_pages/dept/treasurer/home.html
@@ -105,7 +105,7 @@ tree: true
 function downloadFileEx(filename) {
     if (filename != null) {
         var url = 'https://www.latah.id.us/api/DownloadFileEx?filename=' + filename;
-        setTimeout(() => window.open(url), 500);
+        window.open(url);
     }
 }
 </script>
