--- a/_pages/dept/commissioners/home.html
+++ b/_pages/dept/commissioners/home.html
@@ -56,7 +56,7 @@ tree: true
 				<h4 class="panel-title text-center">Additional Information</h4>
 			</div>
   		<div class="list-group text-center">
-      	<a href="#" class="list-group-item list-link" onclick="downloadFile('CommissionerDistricts.pdf'); return false;">Commissioner District Maps</a>
+      	<a href="#" class="list-group-item list-link" onclick="downloadFileEx('CommissionerDistricts.pdf'); return false;">Commissioner District Maps</a>
       	<a href="http://www.latah.id.us/mailman/listinfo/agendanotify" class="list-group-item list-link">Agenda Notifications</a>
       	<a href="/assessor/" class="list-group-item list-link">Tax Exempt Property Information</a>
       	<a href="/commissions/#laws" class="list-group-item list-link">Idaho Open Meeting Laws</a>
@@ -131,7 +131,7 @@ deptTree("comAgendas", "Commissioners")
 </script>
 
 <script text/javascript>
-function downloadFile(filename){
+function downloadFileEx(filename){
 				var url = 'https://www.latah.id.us/api/DownloadFileEx?filename=' + filename;
 				setTimeout(() => window.open(url), 500);
 			}
