--- a/_pages/dept/sheriff/home.html
+++ b/_pages/dept/sheriff/home.html
@@ -143,6 +143,6 @@ getNewsandNotices(args, "SO")
 <script text/javascript>
 function downloadFileEx(p){
 				var url = 'https://www.latah.id.us/api/DownloadFileEx?filename=' + p;
-				setTimeout(() => window.open(url), 500);
+				window.open(url);
 			}
 </script>
