--- a/_pages/dept/sheriff/jaildivision.html
+++ b/_pages/dept/sheriff/jaildivision.html
@@ -68,6 +68,6 @@ permalink: /sheriff/jaildivision/
 <script text/javascript>
 function downloadFileEx(filename){
 				var url = 'https://www.latah.id.us/api/DownloadFileEx?filename=' + filename;
-				setTimeout(() => window.open(url), 500);
+				window.open(url);
 			}
 </script>
