--- a/_pages/dept/assessor/home.html
+++ b/_pages/dept/assessor/home.html
@@ -18,7 +18,7 @@ news: true
               <figcaption class="figure-caption text-center">Assessor Patrick Vaughan</figcaption>
             </figure>
             <p>
-              The County Assessor maintains a current record of ownership of all property within Latah County, prepares a map or “assessor’s plat record” of all real property within the county, and assesses the market value of all property in the county. The Assessor must notify each property owner of the assessed value of their property on an annual Assessment Notice.
+              The County Assessor maintains a current record of ownership of all property within Latah County, prepares a map or <a href="assessorPlatMaps/">assessor’s plat record</a> of all real property within the county, and assesses the market value of all property in the county. The Assessor must notify each property owner of the assessed value of their property on an annual Assessment Notice.
             </p>
             <p>
               The Assessor submits annual property rolls and abstracts with all of the county’s assessment data to the County Auditor and the State Tax Commission. These reports include the overall taxable value of all property located within the boundaries of local taxing districts. This total taxable value is part of the calculation used by local taxing districts to set their annual property tax levies.
@@ -27,10 +27,10 @@ news: true
               The property tax levy is the rate at which all property will be taxed in order to collect the amount of property taxes approved in that year’s budget. The assessed value of each property determines that property owner’s share of the annual property taxes to be collected.
             </p>
             <p>
-              The Assessor’s Office also administers homeowner exemption applications, as well as the state Property Tax Reduction Program (also known as “Circuit Breaker”) for qualifying senior citizens or disabled homeowners.
+              The Assessor’s Office also administers <a href="https://tax.idaho.gov/i-1051.cfm#sub1">homeowner exemption</a> applications, as well as the state <a href="https://tax.idaho.gov/pubs/EBR00135_10-24-2017.pdf">Property Tax Reduction</a> Program (also known as “Circuit Breaker”) for qualifying senior citizens or disabled homeowners.
             </p>
             <p>
-              In Idaho, the licensing and titling of vehicles and vessels performed at DMVs also falls under the responsibility of the County Assessor.
+              In Idaho, the licensing and titling of vehicles and vessels performed at <a href="../dmv/">DMVs</a> also falls under the responsibility of the County Assessor.
             </p>
           </div>
         </div>
@@ -70,8 +70,10 @@ news: true
         <h3 class="panel-title text-center">Our Services</h3>
       </div>
       <ul class="list-group">
-        <li class="list-group-item text-center">Property Appraisals</li>        
-        <li class="list-group-item text-center">Vehicle licensing and Titling</li>
+        <li class="list-group-item text-center">Assessor's Plat Record</li>        
+        <li class="list-group-item text-center">Property Assessments</li>                
+        <li class="list-group-item text-center">Property Tax Relief</li>        
+        <li class="list-group-item text-center">Vehicle licensing</li>
       </ul>
     </div>
 
@@ -81,6 +83,7 @@ news: true
         <h3 class="panel-title text-center">Additional Information</h3>
       </div>
       <div class="list-group">
+        <!-- <a href="assessorPlatMaps/" class="list-group-item list-link text-center">Assessor Plat Maps</a>      disabled for now   -->
         <a href="assessorfaq.html" class="list-group-item list-link text-center" data-remote="false" data-toggle="modal" data-target="#myModal">Assessor FAQ</a>
         <a href="https://tax.idaho.gov/i-1051.cfm#sub1" class="list-group-item list-link text-center" target="_blank">Homeowners & Property Tax</a>
         <a href="https://gis.latah.id.us/parcelviewer/index.html" class="list-group-item list-link text-center" target="_blank">Latah County Parcel Viewer</a>
