Added assessor carousel. Closes issue #88.

--- a/_pages/dept/assessor/home.html
+++ b/_pages/dept/assessor/home.html
@@ -58,7 +58,99 @@ news: true
         </div>
       </div>
     </div>
-
+    <div class="row" id="deptPics">
+      <div class="well">
+        <div id="assessorCarousel" class="carousel slide text-center" data-ride="carousel">
+          <!-- Wrapper for slides -->
+          <div class="carousel-inner" role="listbox">
+            <div class="item active">
+              {% cloudinary assessor_carousel /img/assessor/Michelle.swearing.in.jpg class="img-responsive rounded" class="img-responsive
+              rounded" alt="Deputy Assessors Sworn In" %}
+              <div class="caption well">
+                Deputy Assessors Sworn In - As members of the Latah County Assessor's staff, employees are bound to a code of ethics. Each
+                Deputy Assessor takes an oath of office to support the laws of the United States and Idaho, and to faithfully discharge
+                their duties in performing just and equal assessments.
+              </div>
+            </div>
+            <div class="item">
+              {% cloudinary assessor_carousel /img/assessor/Landon.swearing.in.jpg class="img-responsive rounded" alt="Deputy Assessors
+              Sworn In" %}
+              <div class="caption well">
+                Deputy Assessors Sworn In - As members of the Latah County Assessor's staff, employees are bound to a code of ethics. Each
+                Deputy Assessor takes an oath of office to support the laws of the United States and Idaho, and to faithfully discharge
+                their duties in performing just and equal assessments.
+              </div>
+            </div>
+            <div class="item">
+              {% cloudinary assessor_carousel /img/assessor/abstract.tech.jpg class="img-responsive rounded" alt="Amy, Data Abstract Analyst"
+              %}
+              <div class="caption well">
+                Amy, Data Abstract Analyst, reviews a daily audit of the property roll with Technical Systems Appraiser, Lynn. Amy performs
+                computer data entry for over 18,000 real property parcels in Latah County. This computer-assisted mass appraisal
+                program integrates real estate market data, construction cost data and appraisal input to compute equitable property
+                tax assessments.
+              </div>
+            </div>
+            <div class="item">
+              {% cloudinary assessor_carousel /img/assessor/neighborhood.map.jpg class="img-responsive rounded" alt="Latah County property
+              appraisers" %}
+              <div class="caption well">
+                Latah County property appraisers: - Nick, Landon and Ashley, Latah County property appraisers, stand before "neighborhood"
+                maps. Appraisers use sales data to assist in identifying different market areas within Latah County.
+              </div>
+            </div>
+            <div class="item">
+              {% cloudinary assessor_carousel /img/assessor/front.office.jpg class="img-responsive rounded" alt="Assessor's front office"
+              %}
+              <div class="caption well">
+                Assessor's front office: - "Front Office" staff are Lynn, Debbie, Terrie and Cammie. They perform duties required by Idaho
+                Code to maintain a current record of property ownership in Latah County, to administer homeowner exemptions, to
+                manage the property tax reduction program for eligible senior citizens or disabled owners, and to track and assess
+                manufactured homes that enter the county during the course of the year.
+              </div>
+            </div>
+            <div class="item">
+              {% cloudinary assessor_carousel /img/assessor/assessor_cartographer.jpg class="img-responsive rounded" alt="Assessor's Cartographer"
+              %}
+              <div class="caption well">
+                Assessor's Cartographer, Debbie, is the lead for processing all deeds of conveyance for property in Latah County. Idaho Code
+                requires that, "The assessor must have prepared a full, accurate and complete plat record of all parcels of real
+                property within his county." Debbie performs much of this work, including splitting parcels and processing land
+                divisions, with computer mapping.
+              </div>
+            </div>
+            <div class="item">
+              {% cloudinary assessor_carousel /img/assessor/assesor_personal_prop.jpg class="img-responsive rounded" alt="Terrie, Personal
+              Property Clerk" %}
+              <div class="caption well">
+                Terrie, Personal Property Clerk, performs data entry and assessments for approximately 2,000 personal property parcels. Idaho
+                Code requires that each personal property owner submit a true and correct statement of personal property to the
+                county assessor not later than March 15 each year, and that the assessor determine the market value for assessment.
+              </div>
+            </div>
+            <div class="item">
+              {% cloudinary assessor_carousel /img/assessor/appraisal.staff.jpg class="img-responsive rounded" alt="Nick, Landon, Lynn,
+              Alyssa (Senior Residential Appraiser), David, and Ashley" %}
+              <div class="caption well">
+                Nick, Landon, Lynn, Alyssa (Senior Residential Appraiser), David, and Ashley review the assessed values of recently inspected
+                properties. The Assessor's staff of ad valorem appraisers physically visit every property once during the 5 year
+                revaluation cycle. They ensure recent property updates, together with current market and cost schedules, are correctly
+                applied to result in a fair and reasonable market value "bottom line".
+              </div>
+            </div>
+          </div>
+          <!-- Controls -->
+          <a class="left carousel-control" href="#assessorCarousel" role="button" data-slide="prev">
+            <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
+            <span class="sr-only">Previous</span>
+          </a>
+          <a class="right carousel-control" href="#assessorCarousel" role="button" data-slide="next">
+            <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
+            <span class="sr-only">Next</span>
+          </a>
+        </div>
+      </div>
+    </div>
   </div>
   <!--class="col-md-8" -->
 
