--- a/_pages/dept/treasurer/home.html
+++ b/_pages/dept/treasurer/home.html
@@ -70,8 +70,9 @@ tree: true
       <a href="taxbillfaq.html" data-remote="false" class="list-group-item list-link text-center" data-toggle="modal" data-target="#myModal">Tax Bill FAQ</a>
       <a href="somethingnewfaq.html" data-remote="false" class="list-group-item list-link text-center" data-toggle="modal" data-target="#myModal">New Bill Items FAQ</a>
       <a href="taxpaymentfaq.html" data-remote="false" class="list-group-item list-link text-center" data-toggle="modal" data-target="#myModal">Tax Payment FAQ</a>
-			<a href="taxdeedfaq.html" data-remote="false" class="list-group-item list-link text-center" data-toggle="modal" data-target="#myModal">Tax Deed FAQ</a>
-			<a href="payments.html" data-remote="false" class="list-group-item list-link text-center" data-toggle="modal" data-target="#myModal">Payments</a>
+      <a href="taxdeedfaq.html" data-remote="false" class="list-group-item list-link text-center" data-toggle="modal" data-target="#myModal">Tax Deed FAQ</a>
+      <a href="https://client.pointandpay.net/webportal/partner.do?method=prepare&webSiteId=137&ppid=2291" data-remote="false" class="list-group-item list-link text-center" style="color:red">Pay Property Taxes Online</a>
+      <a href="payments.html" data-remote="false" class="list-group-item list-link text-center" data-toggle="modal" data-target="#myModal">Payments</a>
 			<a href="#" data-remote="false" class="list-group-item list-link text-center" onclick="downloadFileEx('VoterApprovedLevyBondTracker.pdf'); return false;">Levy and Bond Tracker Information</a>
 			</div>
 		</div>
