--- a/_pages/dept/treasurer/payments.html
+++ b/_pages/dept/treasurer/payments.html
@@ -19,7 +19,7 @@ permalink: /treasurer/payments
   </div>
   <p class="panel-body">
 
-    <a href="https://client.pointandpay.net/webportal/partner.do?method=prepare&webSiteId=137&ppid=2291">To Pay Online</a>
+    <a href="https://client.pointandpay.net/webportal/partner.do?method=prepare&webSiteId=137&ppid=2291" style="color:red">Pay Property Taxes Online</a>
   </p>
 
   <div class="panel-heading">
