Changes requested by Civil and Jail.

--- a/_pages/dept/sheriff/civil.html
+++ b/_pages/dept/sheriff/civil.html
@@ -11,7 +11,14 @@ permalink: /sheriff/civil
           All Civil Process to be served by the Sheriff's Office must go through the Civil Office. The Sheriff's Office serves a variety of papers to include tax warrants, protection orders, writs, summons, subpoenas, and eviction notices.
         </p>
         <p>
-          If you want the Sheriff's Office to serve a civil paper, deliver it in person or by mail to the Sheriff's Civil Office, located at the county courthouse at 522 S. Adams Street in Moscow. Please include a letter of instruction and prepayment of fees unless otherwise indicated below:
+          If you want the Sheriff's Office to serve a civil paper, deliver it in person to the Sheriff's Civil Office, located at the County courthouse at 522 S. Adams Street in Moscow, or mail it to:<br/>
+          <br/>
+          Latah County Courthouse<br/>
+          PO Box 8068<br/>
+          Moscow ID 83843
+          <br/>
+          <br/>
+          Please include a letter of instruction and prepayment of fees unless otherwise indicated below:
         </p>
 
         <div class="panel panel-default" >
@@ -24,7 +31,7 @@ permalink: /sheriff/civil
             Summons, subpoena, small claims, eviction notice, Other notices, etc.
             <br>
             <b>Service of Writ Process for Wages or Bank Accounts:</b>
-            Writ of Execution for collection of money due - wages garnishment or attachment of bank accounts. A $65.00 prepaid fee is required. Commission will be collected from the defendant. A $12.50 interim fee will also be collected on continuing wage garnishments every 60 days. If the defendant is unable to pay, the fee will be billed to the Plaintiff. <b>BANK GARNISHMENT ONLY:</b> Plaintiff must provide the Sheriff with a check for a search fee in the amount of $5.00 made payable to the bank for the Sheriff to serve with the papers.
+            Writ of Execution for collection of money due - wage garnishment or attachment of bank accounts. A $65.00 prepaid fee is required. A $12.50 interim fee will also be collected on continuing wage garnishments every 60 days. If the defendant is unable to pay, the fee will be billed to the Plaintiff. <b>BANK GARNISHMENT ONLY:</b> Plaintiff must provide the Sheriff with a check for a search fee in the amount of $5.00 made payable to the bank for the Sheriff to serve with the papers.
             <br>
             <b>Service of Writ Process - Other Personal Property: $65.00</b>
             Writ of Execution for collection of money due - other personal property. Additional charges or deposits may be required for property seizure on a case by case basis.  Please contact the civil department for more information on this type of seizure.
@@ -37,6 +44,8 @@ permalink: /sheriff/civil
         </div>
         <p>
           If you have been served with a <b>Warrant of Distraint</b> (for payment of delinquent personal property taxes), make payment to the Treasurer's Office. There are cases where payment has been sent prior to being served with tax papers. In those cases, contact the Treasurer's Office concerning the payment.
+          <br/>
+          <br/>
           The Civil Office does not give legal advice. If you need help with a legal situation, contact the court assistance office at 883-7221, or contact an attorney.
           <br>
           <br>
