--- a/_pages/dept/sheriff/jailContactInmates.html
+++ b/_pages/dept/sheriff/jailContactInmates.html
@@ -3,8 +3,10 @@ permalink: /sheriff/jailContactInmates.html
 ---
 <div class="panel panel-default" >
   <div class="panel-body">
-    <p>Inmates have access to telephones to make outgoing collect calls only. If you call the Jail, you will no be able to reach an inmate.
-      To leave money for an inmate, contact the front desk of the Sheriff's Office. Other materials may not be left for inmates.
+    <p>Inmates have access to telephones to make outgoing collect calls only. You may set up an account by contacting Telmate at (ph.) 866-516-0115 or 
+      online at <a href="https://www.gettingout.com">www.gettingout.com</a> If you call the Jail, you will not be able to reach an inmate. To put money on an inmate account you may come into 
+      the Sheriff’s Office and use the Kiosk in the lobby, the phone number and website listed above or mail in a money order made out to the inmate.
+      Personal checks are not allowed. The Sheriff’s Office will not accept property, mail or medications brought in without prior authorization by the Jail Commander. 
     </p>
   </div>
 </div>
