--- a/_pages/dept/sheriff/jailPostingBond.html
+++ b/_pages/dept/sheriff/jailPostingBond.html
@@ -3,13 +3,15 @@ permalink: /sheriff/jailPostingBond.html
 ---
 <div class="panel panel-default" >
   <div class="panel-body">
-    <p>To bond someone out of Jail, bring the amount of bail to the Court Clerk's Office and they will give you a receipt to bring over to the Sheriff's Office.
-      After hours, bond can be posted at the front window of the Sheriff's Office. If you do not have cash for the bond, you will need to contact a bondsman of your choice.
-      There are several bondsmen listed in the yellow pages of the phone book. The bondsman you contact should be familiar with the procedure.
-      The information needed to complete the paperwork can be obtained at the Court Clerk's Office. After hours you can contact the front desk of the Sheriff's Office.
-       The inmate is released from the Sixth Street entrance of the Jail once everything is completed.
-       It takes thirty minutes to an hour to book someone into Jail and another thirty minutes to complete the bond paperwork and release them.
-       If there are problems or the Jail staff is busy, it may take much longer to complete the process.
+    <p>To bond someone out of Jail, bring the amount of bail to the Court Clerk's Office and they will give you a receipt to bring over to the
+       Sheriff's Office. After hours, bond can be posted at the front window of the Sheriff's Office. If you do not have cash for the bond, 
+       you will need to contact a bondsman of your choice. There are several bondsmen listed in the yellow pages of the phone book. 
+       The bondsman you contact should be familiar with the procedure. The information needed to complete the paperwork can be obtained at the
+       Court Clerk's Office. After hours you can contact the front desk of the Sheriff's Office. If you are bonding someone out after the 
+       court has closed or on weekends there is a $10.00 additional processing fee which must be separate from the bond. The inmate is 
+       released from the Sixth Street entrance of the Jail once everything is completed. It takes thirty minutes to an hour to book someone 
+       into Jail and another thirty minutes to complete the bond paperwork and release them. If there are problems or the Jail staff is busy, 
+       it may take much longer to complete the process. 
     </p>
   </div>
 </div>
