--- a/_pages/dept/sheriff/jailVisitingInfo.html
+++ b/_pages/dept/sheriff/jailVisitingInfo.html
@@ -26,7 +26,7 @@ permalink: /sheriff/jailVisitingInfo.html
   </div>
     <div class="panel-body">
       <p>
-        Be sure to bring picture ID when coming to the Jail. Any juveniles coming to visit an inmate must be accompanied by their parent or legal guardian.
+       Be sure to bring a valid picture ID when coming to the Jail. Any juveniles coming to visit an inmate must be accompanied by their parent or legal guardian and proof of such. Visitors must not have been incarcerated within the last 30 days. If you are on probation you must have prior approval through your probation officer.
       </p>
     </div>
   </div>  
