--- a/_pages/dept/sheriff/jaildivision.html
+++ b/_pages/dept/sheriff/jaildivision.html
@@ -10,34 +10,33 @@ permalink: /sheriff/jaildivision/
 		<div class="col-md-12">
 			<div class="panel panel-default">
 				<p class="panel-body">
-					The Latah County Jail is an adult male and female holding facility that was built in 1972. The jail is designed to hold adults being charged with a crime while
-					awaiting trial, and those adults sentenced for a crime. We also hold for other forms of due process.
-					We house adult prisoners for the Idaho State Police, Moscow Police Department,
-					United States Marshals Service, Bureau of Prisons, Idaho Department of Corrections, other various
-					counties and our own agency. The jail has a maximum holding capacity of 41 individuals.
+					The Latah County Jail is an adult male and female holding facility that was built in 1972. 
+					The jail is designed to hold adults being charged with a crime while awaiting trial, and those adults sentenced to local 
+					jail time or awaiting transport to the Idaho Department of Corrections. We also hold for other forms of due process. 
+					We house adult prisoners for the Idaho State Police, Moscow Police Department, United States Marshals Service, Bureau of Prisons, 
+					Idaho Department of Corrections, other various counties and our own agency. The jail has a maximum holding capacity of 42 individuals.									
 					<br><br>
-					The jail is also capable of temporarily holding male and female juveniles. We have a juvenile room capable of holding 1 juvenile at a time.
-					A juvenile may be placed in this room for up to 72 hours then must be transferred out to a Juvenile Detention Center.
+					The jail is staffed by 1 Lieutenant, 1 Sergeant, 2 Corporals and 8 Deputies working 2 different shifts. 
+					The jail admits new bookings and releases inmates twenty four hours a day. The Jail Staff dispenses medication, feeds inmates, 
+					delivers and receives individuals from court and transports inmates to different agencies. They also provide housed inmates access to the library,
+					recreation yard, attorneys, clergy, and special programs. Security checks, as well as inmates needing work/ school / treatment release are
+					also done throughout the entire day.
 					<br><br>
-					The jail is staffed by 1 Sergeant, 3 Corporals and 8 Deputies working 3 different shifts. The jail admits new bookings and releases inmates twenty four hours a day as
-					well as keeping the jail sanitary. Day shift dispenses medication, feeds inmates morning and after meals, delivers and receives individuals from court, transports inmates
-					to different agencies and provides housed inmates access to the library, recreation yard, attorney's and clergy. Swing shift also dispenses medications, feeds inmates
-					the evening meal, provides access to the library, recreation yard, attorney's and clergy, delivers and receives individuals from court, transports inmates to
-					different agencies, provides special programs to inmates. Graveyard shift dispenses medication, completes lock down, security checks, bookings and releases
-					and releases morning work release inmates.
+					The jail's library consists of reading books, a Pull up Bar and Dip Bar. We also have an outside recreation yard.
+					 Both the library and recreation yard are constantly monitored. Inmates are allowed one hour per day in either location or a combination of both. 
+					 The library contains a complete set of Idaho Code books and Federal Code books for legal research. 
 					<br><br>
-					The jail's library consists of reading books, a weight machine and a stationary bike for personal use. We also have an outside recreation yard.
-					Both the library and recreation yard are constantly monitored. Inmates are allowed one hour per day in either location. The library contains a complete set of
-					Idaho Code books and Federal Code books for legal research.
+					The jail offers special programs to inmates to include Alcoholics Anonymous, Narcotics Anonymous, church services and a G.E.D program. 
 					<br><br>
-					The jail offers special programs to inmates to include Alcoholics Anonymous, Narcotics Anonymous, church services, a G.E.D program and a correspondence
-					course through the University of Idaho.
+					Prisoners are offered visitation with family and friends. Male inmates are allowed visitors Sunday's 1:00-4:00 PM, Tuesday 1:00-3:00 PM and 
+					Thursdays 7:00-9:00 PM. Female inmates are allowed visitors Monday's 7:00-9:00 PM, Thursdays 1:00-3:00 PM and Saturdays 1:00 – 3:00 PM. 
+					All visits are in special visiting room and are non-contact. Visitors must be 18 years of age or accompanied by their parent or legal guardian, 
+					and must not have been incarcerated within the last 30 days. If you are on probation you must have prior approval through your probation officer. 
+					Everyone visiting must have a valid picture ID.
 					<br><br>
-					Prisoners are also offered visitation with family or friends. Males inmates are allowed to visit Sunday's 1:00-4:00 PM and Thursdays 7:00-9:00 PM.
-					Female inmates are allowed visitors Monday's 7:00-9:00 PM and Thursdays 1:00-3:00 PM. All visits are in special visiting rooms and are non-contact.
-					<br><br>
-					Home health nurses come into the jail twice a week for inmate sick call. They handle the majority of the cases and for those cases that require a physician,
-					we have a local licensed physician on retainer.
+					Medical Staff come into the jail twice a week for inmate sick call and they handle the majority of the cases. 
+					Those cases that require a specialists such as Dental, Eye Exams Lab Work, x-ray’s or any other procedure that cannot be done in the
+					facility are brought to a local Provider in the area.
 				</p>
 			</div>
 		</div>
