--- a/_pages/dept/sheriff/jaildivision.html
+++ b/_pages/dept/sheriff/jaildivision.html
@@ -49,12 +49,13 @@ permalink: /sheriff/jaildivision/
 				<h3 class="panel-title text-center">Additional Information</h3>
 			</div>
 			<div class="list-group">
+					<a href="../jailContactInmates.html" data-remote="false" class="list-group-item list-link text-center" data-toggle="modal" data-target="#myModal">Contacting Inmates</a>
 				<a href="#" id="inmateTelephone" class="list-group-item list-link text-center" onclick="downloadFileEx('Latah-County-Website-Phone-Information.pdf'); return false;">Inmate Telephone Services</a>
-				<a href="../jailLocation.html" data-remote="false" class="list-group-item list-link text-center" data-toggle="modal" data-target="#myModal">Jail Location</a>
-				<a href="../jailVisitingInfo.html" data-remote="false" class="list-group-item list-link text-center" data-toggle="modal" data-target="#myModal">Visiting Information</a>
-				<a href="../jailContactInmates.html" data-remote="false" class="list-group-item list-link text-center" data-toggle="modal" data-target="#myModal">Contacting Inmates</a>
-				<a href="../jailPostingBond.html" data-remote="false" class="list-group-item list-link text-center" data-toggle="modal" data-target="#myModal">Posting Bond</a>
+				<a href="../inmateMail.html" data-remote="false" class="list-group-item list-link text-center" data-toggle="modal" data-target="#myModal">Inmate Mail</a>
+				<a href="../jailLocation.html" data-remote="false" class="list-group-item list-link text-center" data-toggle="modal" data-target="#myModal">Jail Location</a>				
 				<a href="../jailInspections.html" data-remote="false" class="list-group-item list-link text-center" data-toggle="modal" data-target="#myModal">Jail Inspections</a>
+				<a href="../jailPostingBond.html" data-remote="false" class="list-group-item list-link text-center" data-toggle="modal" data-target="#myModal">Posting Bond</a>				
+				<a href="../jailVisitingInfo.html" data-remote="false" class="list-group-item list-link text-center" data-toggle="modal" data-target="#myModal">Visiting Information</a>
 				<a href="/sheriff/" data-remote="false" class="list-group-item list-link text-center">Sheriff Home</a>
 			</div>
 		</div>
