--- a/_pages/dept/sheriff/sales.html
+++ b/_pages/dept/sheriff/sales.html
@@ -24,7 +24,7 @@ tree: true
       <!-- Sales Directory -->
       <div class="panel panel-default">
         <div class="panel-heading">
-          <h4 class=" text-center">Sheriff Office Current Sales</h4>
+          <h4 class="panel-title text-center">Sheriff Office Current Sales</h4>
         </div>
         <div class="list-group">
           <div id="sheriffSalesDir"></div>
@@ -43,7 +43,7 @@ tree: true
     <!-- additional information menu -->
     <div class="panel panel-default">
       <div class="panel-heading">
-        <h3 class="text-center">Additional Information</h3>
+        <h3 class="panel-title text-center">Additional Information</h3>
       </div>
       <div class="list-group">
         <a href="/sheriff/" data-remote="false" class="list-group-item list-link text-center">Sheriff Home</a>
