Adding updated telephone document for the jail

--- a/_pages/dept/sheriff/jaildivision.html
+++ b/_pages/dept/sheriff/jaildivision.html
@@ -50,7 +50,7 @@ permalink: /sheriff/jaildivision/
 			</div>
 			<div class="list-group">
 					<a href="../jailContactInmates.html" data-remote="false" class="list-group-item list-link text-center" data-toggle="modal" data-target="#myModal">Contacting Inmates</a>
-				<a href="#" id="inmateTelephone" class="list-group-item list-link text-center" onclick="downloadFileEx('Latah-County-Website-Phone-Information.pdf'); return false;">Inmate Telephone Services</a>
+				<a href="#" id="inmateTelephone" class="list-group-item list-link text-center" onclick="downloadFileEx('INMATE TELEPHONE SERVICES AT LATAH COUNTY JAIL.pdf'); return false;">Inmate Telephone Services</a>
 				<a href="../inmateMail.html" data-remote="false" class="list-group-item list-link text-center" data-toggle="modal" data-target="#myModal">Inmate Mail</a>
 				<a href="../jailLocation.html" data-remote="false" class="list-group-item list-link text-center" data-toggle="modal" data-target="#myModal">Jail Location</a>				
 				<a href="../jailInspections.html" data-remote="false" class="list-group-item list-link text-center" data-toggle="modal" data-target="#myModal">Jail Inspections</a>
