--- a/_pages/home.html
+++ b/_pages/home.html
@@ -108,7 +108,7 @@ news: true
     <div class="modal-content">
       <div class="modal-header">
         <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-        <h4 class="modal-title" id="holidaysLabel">County Holidays</h4>
+        <h4 class="modal-title" id="holidaysLabel">Latah County Recognized Holidays</h4>
       </div>
       <div class="modal-body">
         <ul class="list-group text-center">
