--- a/_pages/dept/auditor/elections/home.html
+++ b/_pages/dept/auditor/elections/home.html
@@ -3,6 +3,7 @@ layout: page
 title: Elections
 permalink: /auditor/elections/
 calendar: true
+news: true
 ---
 <!-- Info Row -->
 <div class="row">
@@ -18,6 +19,28 @@ calendar: true
           <video class="center-block" width="320" height="180" controls>
             <source src="https://idahovotes.gov/videos/Extended_Video.mp4" type="video/mp4"> Your browser does not support the video tag.
           </video>
+        </div>
+      </div>
+    </div>
+    <div class="row" id="newsNotices">
+      <div class="container col-md-6" id="notices">
+        <div class="panel panel-primary">
+          <div class="panel-heading">
+            <h3 class="panel-title text-center">Notices</h3>
+          </div>
+          <div class="list-group">
+            <div id="electionsNotice"></div>
+          </div>
+        </div>
+      </div>
+      <div class="container col-md-6" id="news">
+        <div class="panel panel-primary">
+          <div class="panel-heading">
+            <h3 class="panel-title text-center">News</h3>
+          </div>
+          <div class="list-group">
+            <div id="electionsNews"></div>
+          </div>
         </div>
       </div>
     </div>
@@ -299,4 +322,8 @@ calendar: true
 <script text/javascript>
   calendarList('Elections', 0, 30);
   calendarMonth();
+</script>
+<script type="text/javascript">
+  const args = ['electionsNews', 'electionsNotice'];
+  getNewsandNotices(args, "Elections")
 </script>
